# Docsmith

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  Todo.md  action.yml  docsmith.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
configs/: README.md  base.yaml
docs/architecture/: README.md
docs/planning/: roadmap.md
docs/superpowers/plans/: 2026-06-11-index-core.md  (+1 more)
evaluation/: README.md  report.py
evaluation/curated/: __init__.py
evaluation/history_replay/: __init__.py
scripts/: README.md
src/: __init__.py  models.py
src/detection/: __init__.py  candidate_linker.py  diff_parser.py  investigator.py  symbol_mapper.py  triage_filter.py
src/github/: __init__.py  client.py  reporter.py
src/index/: __init__.py  builder.py  embeddings.py  hashing.py  linker.py  store.py
src/llm/: __init__.py  client.py  prompts.py  tools.py
src/parsing/: __init__.py  code_parser.py  doc_parser.py  languages.py
src/repair/: __init__.py  confidence_router.py  repairer.py  validator.py
src/utils/: config.py  logging.py
tests/: README.md  TEST_PLAN.md  __init__.py  conftest.py
tests/integration/: test_build_index.py  test_build_index_hybrid.py  test_cli_build_index.py  test_update_index.py
tests/unit/: __init__.py  test_code_parser.py  test_code_parser_multilang.py  test_doc_parser_refs.py  test_doc_parser_sections.py  test_embeddings_embedder.py  test_hashing.py  test_languages.py  test_linker.py  test_linker_hybrid.py  test_models.py  test_smoke.py  test_store.py  test_vector_store.py
(+7 files in other folders)
