[project]
name = "docsmith"
version = "0.1.0"
description = "Language-agnostic self-healing technical documentation for GitHub pull requests."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Akshay Prajapati" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
